[metadata]
name = repository scanners
description = Repository Scanners

[options]
requires_python = >=3
include_package_data = False
zip_safe = False
package_dir = = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
repository_scanners =
    static/*.ini

[options.entry_points]
console_scripts =
  secret_scanner = repository_scanners.secret_scanners.cli:scan_repository_from_cli