[metadata]
name = resc_backend
description = Repository Scanner backend components

[options]
requires_python = >=3
include_package_data = False
zip_safe = False
package_dir = = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
resc =
    static/*.ini

[options.entry_points]
console_scripts =
  resc_initialize_rabbitmq_users = resc_backend.bin.rabbitmq_bootup:bootstrap_rabbitmq_users
