[metadata]
name = resc_backend
description = Repository Scanner - Backend
version = 1.0.2
author = ABN AMRO
author_email = resc@nl.abnamro.com
url = https://github.com/ABNAMRO/repository-scanner
download_url =
long_description = file: README.md
long_description_content_type = text/markdown

[options]
requires_python = >=3.9
include_package_data = False
zip_safe = False
package_dir = = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
resc =
    static/*.ini

[options.entry_points]
console_scripts =
  resc_initialize_rabbitmq_users = resc_backend.bin.rabbitmq_bootup:bootstrap_rabbitmq_users
