[metadata]
name = resc vcs scanner
description = RESC Version Control System Scanner
version = 0.0.1
author = ABN AMRO
author_email = resc@nl.abnamro.com
url = https://github.com/ABNAMRO/repository-scanner
download_url =
long_description = file: README.md
long_description_content_type = text/markdown

[options]
requires_python = >=3
include_package_data = False
zip_safe = False
package_dir = = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
vcs_scanner =
    static/*.ini

[options.entry_points]
console_scripts =
  secret_scanner = vcs_scanner.secret_scanners.cli:scan_repository_from_cli
