[metadata]
name = resc_vcs_scanner
description = Repository Scanner - Version Control System - Scanner
version = 2.0.0
author = ABN AMRO
author_email = resc@nl.abnamro.com
url = https://github.com/ABNAMRO/repository-scanner
download_url =
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
install_requires =
  celery==5.3.1
  amqp==5.1.1
  requests==2.31.0
  typing==3.7.4.3
  pydantic==1.8.2
  GitPython==3.1.32
  resc-backend>=2.0.0
  tenacity==8.2.2
  prettytable==3.8.0
  termcolor==2.3.0
  tomlkit==0.12.1
include_package_data = True
zip_safe = False
package_dir = = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
vcs_scanner =
    static/*.ini

[options.entry_points]
console_scripts =
  secret_scanner = vcs_scanner.secret_scanners.cli:scan_repository_from_cli
