[metadata]
name = vcs_scraper
description = Repository Scanner -- Version Control Systems' scraper
version = 0.0.2
author = ABN AMRO
author_email = resc@nl.abnamro.com
url = https://github.com/ABNAMRO/repository-scanner
download_url =
long_description = file: README.md
long_description_content_type = text/markdown

[options]
requires_python = >=3
include_package_data = False
zip_safe = False
package_dir = = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
vcs_scraper =
    static/*.ini

[options.entry_points]
console_scripts =
  collect_projects = vcs_scraper.project_collector.common:collect_all_projects
