[metadata]
name = resc_vcs_scraper
description = Repository Scanner - Version Control System - Scraper
version = 2.0.0
author = ABN AMRO
author_email = resc@nl.abnamro.com
url = https://github.com/ABNAMRO/repository-scanner
download_url =
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
install_requires =
  celery==5.3.1
  atlassian-python-api==3.40.0
  requests==2.31.0
  azure-devops==7.1.0b3
  tenacity==8.2.2
  pydantic==1.8.2
  pygithub==1.59.1
include_package_data = False
zip_safe = False
package_dir = = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
vcs_scraper =
    static/*.ini

[options.entry_points]
console_scripts =
  collect_projects = vcs_scraper.project_collector.common:collect_all_projects
