[metadata]
name = resc_helm_wizard
description = Repository Scanner - Helm Wizard
version = 1.1.0
author = ABN AMRO
author_email = resc@nl.abnamro.com
url = https://github.com/ABNAMRO/repository-scanner
download_url =
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.md
requirements_files = file: requirements.txt

[options]
python_requires = >=3.12
include_package_data = True
zip_safe = False
package_dir = = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
resc_helm_wizard =
    static/*.ini, config/*.yaml

[options.entry_points]
console_scripts =
  resc-helm-wizard = resc_helm_wizard.run_wizard:prompt_questions
